--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "@pinia/nuxt": "^0.11.2",
     "axios": "^1.12.2",
+    "crypto-js": "^4.2.0",
+    "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "npm": "^11.6.2",
     "nuxt": "^4.1.3",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/js-cookie": "^3.0.6"
   }
 }
