--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nuxt": "^4.1.3",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
+    "vue-cropper": "^0.6.5",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
