--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "npm": "^11.6.0",
-    "nuxt": "^4.1.3",
+    "nuxt": "^4.2.1",
     "pinia": "^3.0.3",
     "postcss": "^8.5.6",
     "postcss-preset-env": "^10.4.0",
     "sass": "^1.93.3",
     "sass-embedded": "^1.93.3",
+    "typescript": "^5.9.3",
     "vue": "^3.5.22",
     "vue-cropper": "^0.6.5",
     "vue-router": "^4.5.1"
